fix(ci): make Docusaurus baseUrl dynamic for PR previews
Configure baseUrl via BASE_URL env var to support PR preview paths.
Fixes asset loading issues when previews are deployed to subdirectories.

--- a/.github/workflows/deploy_pr_preview.yaml
+++ b/.github/workflows/deploy_pr_preview.yaml
@@ -19,6 +19,8 @@ jobs:
     secrets: inherit
     permissions:  
       packages: read
+    with:
+      base-url: ${{ github.event_name == 'pull_request_target' && format('/documentation/pr-preview/pr-{0}', github.event.pull_request.number) || '/documentation' }}
 
   deploy-preview:
     name: Deploy Preview
