--- a/.github/workflows/_build_docs.yaml
+++ b/.github/workflows/_build_docs.yaml
@@ -2,6 +2,12 @@ name: Build Documentation
 
 on:
   workflow_call:
+    inputs:
+      base-url:
+        description: 'Base URL for Docusaurus'
+        required: false
+        type: string
+        default: '/documentation'
     outputs:
       artifact-name:
         description: "Name of the uploaded build artifact"
@@ -80,6 +86,8 @@ jobs:
         run: |
           yarn install
           yarn build
+        env:
+          BASE_URL: ${{ inputs.base-url }}
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
